--- a/Fast Arrow 1.5.csproj
+++ b/Fast Arrow 1.5.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.props')" />
-  <Import Project="packages\cef.redist.x86.93.1.11\build\cef.redist.x86.props" Condition="Exists('packages\cef.redist.x86.93.1.11\build\cef.redist.x86.props')" />
-  <Import Project="packages\cef.redist.x64.93.1.11\build\cef.redist.x64.props" Condition="Exists('packages\cef.redist.x64.93.1.11\build\cef.redist.x64.props')" />
+  <Import Project="packages\CefSharp.Common.94.4.50\build\CefSharp.Common.props" Condition="Exists('packages\CefSharp.Common.94.4.50\build\CefSharp.Common.props')" />
+  <Import Project="packages\cef.redist.x86.94.4.5\build\cef.redist.x86.props" Condition="Exists('packages\cef.redist.x86.94.4.5\build\cef.redist.x86.props')" />
+  <Import Project="packages\cef.redist.x64.94.4.5\build\cef.redist.x64.props" Condition="Exists('packages\cef.redist.x64.94.4.5\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -128,14 +128,14 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CefSharp, Version=93.1.110.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
-      <HintPath>packages\CefSharp.Common.93.1.110-pre\lib\net452\CefSharp.dll</HintPath>
+    <Reference Include="CefSharp, Version=94.4.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.94.4.50\lib\net452\CefSharp.dll</HintPath>
     </Reference>
-    <Reference Include="CefSharp.Core, Version=93.1.110.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
-      <HintPath>packages\CefSharp.Common.93.1.110-pre\lib\net452\CefSharp.Core.dll</HintPath>
+    <Reference Include="CefSharp.Core, Version=94.4.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.Common.94.4.50\lib\net452\CefSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="CefSharp.WinForms, Version=93.1.110.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
-      <HintPath>packages\CefSharp.WinForms.93.1.110-pre\lib\net452\CefSharp.WinForms.dll</HintPath>
+    <Reference Include="CefSharp.WinForms, Version=94.4.50.0, Culture=neutral, PublicKeyToken=40c4b6fc221f4138, processorArchitecture=MSIL">
+      <HintPath>packages\CefSharp.WinForms.94.4.50\lib\net462\CefSharp.WinForms.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationCore" />
@@ -238,10 +238,10 @@
     <PropertyGroup>
       <ErrorText>Tenhle projekt odkazuje na balíčky NuGet, které nejsou v tomhle počítači k dispozici. Když je chcete stáhnout, použijte funkci obnovení balíčků NuGet.  Další informace najdete na adrese http://go.microsoft.com/fwlink/?LinkID=322105. Chybějícím souborem je soubor {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('packages\cef.redist.x64.93.1.11\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x64.93.1.11\build\cef.redist.x64.props'))" />
-    <Error Condition="!Exists('packages\cef.redist.x86.93.1.11\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x86.93.1.11\build\cef.redist.x86.props'))" />
-    <Error Condition="!Exists('packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.props'))" />
-    <Error Condition="!Exists('packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.targets'))" />
+    <Error Condition="!Exists('packages\cef.redist.x64.94.4.5\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x64.94.4.5\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('packages\cef.redist.x86.94.4.5\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\cef.redist.x86.94.4.5\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.94.4.50\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.94.4.50\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('packages\CefSharp.Common.94.4.50\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\CefSharp.Common.94.4.50\build\CefSharp.Common.targets'))" />
   </Target>
-  <Import Project="packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.93.1.110-pre\build\CefSharp.Common.targets')" />
+  <Import Project="packages\CefSharp.Common.94.4.50\build\CefSharp.Common.targets" Condition="Exists('packages\CefSharp.Common.94.4.50\build\CefSharp.Common.targets')" />
 </Project>
