--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="93.1.11" targetFramework="net472" />
-  <package id="cef.redist.x86" version="93.1.11" targetFramework="net472" />
-  <package id="CefSharp.Common" version="93.1.110-pre" targetFramework="net472" />
-  <package id="CefSharp.WinForms" version="93.1.110-pre" targetFramework="net472" />
+  <package id="cef.redist.x64" version="94.4.5" targetFramework="net472" />
+  <package id="cef.redist.x86" version="94.4.5" targetFramework="net472" />
+  <package id="CefSharp.Common" version="94.4.50" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="94.4.50" targetFramework="net472" />
 </packages>
